--- a/styles/Theme.module.css
+++ b/styles/Theme.module.css
@@ -29,6 +29,15 @@
   border-radius: 16px;
 }
 
+.mintContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10%;
+  margin-top: 24px;
+}
+
 .infoSide {
   display: flex;
   flex-direction: column;
