--- a/styles/Theme.module.css
+++ b/styles/Theme.module.css
@@ -4,7 +4,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100vw;
+  width: 98vw;
+  max-width: 100%;
 }
 
 .previewImage {
